[tool.poetry]
name = "correlate-data"
version = "0.1.0"
description = "Generate data given correlation matrix"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "correlate_data"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
